examples/test/testpolicy19354.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19354
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key7: value12
      key42: value11
      key2: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value5
      podSelector:
        matchLabels:
          key5: value46
          key40: value41
          key36: value20
